fix: add gaps for better readability

--- a/styles.css
+++ b/styles.css
@@ -48,12 +48,17 @@ body {
 
 .header {
   padding: 8px 0;
+  gap: 24px;
 }
 
 .header .logo {
   margin-right: auto;
   font-size: 24px;
   font-weight: bold;
+}
+
+.hero {
+  gap: 48px;
 }
 
 .hero div {
@@ -69,6 +74,8 @@ body {
   background-color: var(--color-blue);
   color: var(--color-white);
   border-color: #3882f6;
+
+  margin-top: 12px;
 }
 
 .hero-img {
@@ -99,20 +106,22 @@ body {
 .info-content {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  gap: 40px;
 }
 
 .card {
-  width: 140px;
-}
-
-.card p {
-  font-size: 18px;
+  width: 150px;
 }
 
 .card-img {
   width: 140px;
   height: 140px;
+  margin-bottom: 8px;
+}
+
+.card p {
+  font-size: 18px;
+  text-align: center;
 }
 
 .card-img, .cta-box {
